# inha_bt

./: .gitignore  README.md
backend_node/: run_vlm.sh  vlm.py  vlm_node.py  vlm_node_compressed.py  vlm_receptionist.py  vlm_thor.py
inha_bt_src/: debug.py  debug.txt
inha_bt_src/inha_bt_pkg/: CMakeLists.txt  package.xml
inha_bt_src/inha_bt_pkg/bt_xmls/missions/: pickandplace_dryrun.xml  receptionist_demo.xml  receptionist_dryrun.xml  receptionist_main.xml  restaurant_demo.xml  restaurant_main.xml
inha_bt_src/inha_bt_pkg/bt_xmls/subtrees/: Each_person.xml  Greeting.xml  IsTargetDetected.xml  ManipulateTarget.xml  Manipulation.xml  Manipulation_recovery.xml  NavigateToTarget.xml
inha_bt_src/inha_bt_pkg/bt_xmls/tests/: approach_test.xml  dummy_test.xml  exploration_test.xml  face_test.xml  human_follow_test.xml  human_stop_test.xml  insightface_text.xml  manipulation_failure_test.xml  manipulation_test.xml  nav_test.xml  rby1_test.xml  sam_test.xml  speak_test.xml  spin_test.xml  stop_test.xml  trigger_test.xml  vlm_test.xml  waving_test.xml
inha_bt_src/inha_bt_pkg/include/inha_bt_pkg/hri/: ContextJsonMaker.h  ExtractWord.h  Listen.h  Speak.h  TextContainCondition.h  VlmQuery.h
inha_bt_src/inha_bt_pkg/include/inha_bt_pkg/manipulation/: ExecuteSuccessServer.h  GraspgenEnable.h  MoveitEnable.h  SetHeadPose.h  SetRobotPose.h
inha_bt_src/inha_bt_pkg/include/inha_bt_pkg/navigation/: Approach.h  CmdPublish.h  CmdSpin.h  Exploration.h  FollowHuman.h  GetCurrentPose.h  GoToPose.h  GoToPrecise.h  IsGoalNearby.h  MakeNavGoal.h  ModifyPose.h  WaitBoolTopic.hpp  WaitGoalReached.h
inha_bt_src/inha_bt_pkg/include/inha_bt_pkg/perception/: ActionFalse.h  Face.h  ObjectPointcloud.h  ObjectSwitch.h  StartReplay.h  StopReplay.h  VisualAlign.h  Waving.h  WavingApproach.h
inha_bt_src/inha_bt_pkg/include/inha_bt_pkg/utils/: ServiceTrigger.h
inha_bt_src/inha_bt_pkg/src/: bt_main.cpp
inha_bt_src/inha_bt_pkg/src/hri/: ContextJsonMaker.cpp  ExtractWord.cpp  Listen.cpp  Speak.cpp  VlmQuery.cpp
inha_bt_src/inha_bt_pkg/src/manipulation/: ExecuteSuccessServer.cpp  GraspgenEnable.cpp  MoveitEnable.cpp  SetHeadPose.cpp  SetRobotPose.cpp
inha_bt_src/inha_bt_pkg/src/navigation/: Approach.cpp  CmdPublish.cpp  CmdSpin.cpp  Exploration.cpp  FollowHuman.cpp  GetCurrentPose.cpp  GoToPose.cpp  GoToPrecise.cpp  WaitGoalReached.cpp
inha_bt_src/inha_bt_pkg/src/perception/: ActionFalse.cpp  Face.cpp  ObjectPointcloud.cpp  ObjectSwitch.cpp  StartReplay.cpp  StopReplay.cpp  VisualAlign.cpp  Waving.cpp  WavingApproach.cpp
inha_bt_src/inha_bt_pkg/src/utils/: ServiceTrigger.cpp
inha_interfaces/: CMakeLists.txt  package.xml
inha_interfaces/action/: Approach.action  CaptureFaceCrop.action  Detection.action  FollowHuman.action  Listen.action  SetHeadPose.action  SetRobotPose.action  Speak.action  VisualAlign.action  Vlm.action  WaitPerson.action  Waving.action  WavingApproach.action
inha_interfaces/srv/: DetectObject.srv  ExecuteSuccess.srv  GraspgenEnable.srv  MoveitEnable.srv  SetEnable.srv  StartReplay.srv  StopReplay.srv
