<?xml version="1.0"?>
<package format="3">
  <name>inha_interfaces</name>
  <version>0.0.1</version>
  <description>Inha-United ROS2 interface package</description>

  <maintainer email="mhlee00@inha.edu">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 인터페이스 생성/런타임 -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
